<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.at</groupId>
    <artifactId>workspace-java</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        
        <maven-surefire-plugin.skipTests>true</maven-surefire-plugin.skipTests>
        <skipTests>${maven-surefire-plugin.skipTests}</skipTests>
    </properties>
    <dependencies>
        <!-- for the problem: javax.annotation.Resource can not be resolved -->
        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>1.3.2</version>
        </dependency>
    </dependencies>
    <build>
        <resources>
            <resource>
                <!-- relative path to pom.xml -->
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>src/main/java</directory>
                <filtering>true</filtering>
                <excludes>
                  <exclude>**/*.java</exclude>
                </excludes>
            </resource>
        </resources>
		<pluginManagement>
			<plugins>
				<!--
					For JDK 11
				-->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
					<configuration>
						<!-- highest setting
						<release>11</release>
						-->
						<source>11</source>
						<target>11</target>
					</configuration>
				</plugin>
				<!--
					Alibaba p3c checkstyle
				-->
				<plugin>
					<!--
						mvn -Dpmd.language=en pmd:check
						mvn -Dpmd.language=en pmd:pmd
					-->
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-pmd-plugin</artifactId>
					<version>3.8</version>
					<configuration>
						<sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
						<targetJdk>${maven.compiler.target}</targetJdk>
						<!-- minimumTokens>100</minimumTokens -->
						<rulesets>
							<ruleset>rulesets/java/ali-comment.xml</ruleset>
							<ruleset>rulesets/java/ali-concurrent.xml</ruleset>
							<ruleset>rulesets/java/ali-constant.xml</ruleset>
							<ruleset>rulesets/java/ali-exception.xml</ruleset>
							<ruleset>rulesets/java/ali-flowcontrol.xml</ruleset>
							<ruleset>rulesets/java/ali-naming.xml</ruleset>
							<ruleset>rulesets/java/ali-oop.xml</ruleset>
							<ruleset>rulesets/java/ali-orm.xml</ruleset>
							<ruleset>rulesets/java/ali-other.xml</ruleset>
							<ruleset>rulesets/java/ali-set.xml</ruleset>
							<ruleset>rulesets/vm/ali-other.xml</ruleset>
						</rulesets>
						<printFailingErrors>true</printFailingErrors>
						 <!-- 1: blocker ; 2: critical ; 3: major -->
						<minimumPriority>2</minimumPriority>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
					<dependencies>
						<dependency>
							<groupId>com.alibaba.p3c</groupId>
							<artifactId>p3c-pmd</artifactId>
							<version>1.3.6</version>
						</dependency>
					</dependencies>
				</plugin>

				<!--
					Recource copying strategy
				-->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.1.0</version>
					<configuration>
						<encoding>${project.build.sourceEncoding}</encoding>
					</configuration>
				</plugin>

				<!--
					Attach the java source as well as the classes
				-->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.0.1</version>
					<executions>
						<execution>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
					<version>2.22.1</version>
					<configuration>
						<!-- Whether skip tests -->
						<skipTests>${skipTests}</skipTests>
					</configuration>
				</plugin>

			</plugins>
		</pluginManagement>
    </build>
    <reporting>
		<pluginManagement>
			<plugins>
				<!-- test reporting -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-report-plugin</artifactId>
					<version>2.22.1</version>
				</plugin>
			</plugins>
		</pluginManagement>
    </reporting>


</project>
